--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test-debug": "mocha --debug-brk",
     "test": "mocha",
     "start": "node ./bin/www"
   },
